crates/escalier_old_parser/src/snapshots/escalier_parser__tests__function_definition-5.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"({x, y}) => x + y;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 18,
                    },
                },
                span: 0..18,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 17,
                            },
                        },
                        span: 0..17,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 1,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 7,
                                                },
                                            },
                                            span: 1..7,
                                            kind: Object(
                                                ObjectPat {
                                                    props: [
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 2,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 3,
                                                                    },
                                                                },
                                                                span: 2..3,
                                                                ident: BindingIdent {
                                                                    name: "x",
                                                                    mutable: false,
                                                                    span: 2..3,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 2,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 3,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                        Shorthand(
                                                            ShorthandPatProp {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 5,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 6,
                                                                    },
                                                                },
                                                                span: 5..6,
                                                                ident: BindingIdent {
                                                                    name: "y",
                                                                    mutable: false,
                                                                    span: 5..6,
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 5,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 6,
                                                                        },
                                                                    },
                                                                },
                                                                init: None,
                                                            },
                                                        ),
                                                    ],
                                                    optional: false,
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                body: Expr(
                                    Expr {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 17,
                                            },
                                        },
                                        span: 12..17,
                                        kind: BinaryExpr(
                                            BinaryExpr {
                                                op: Add,
                                                left: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 13,
                                                        },
                                                    },
                                                    span: 12..13,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 12,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 13,
                                                                },
                                                            },
                                                            span: 12..13,
                                                            name: "x",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                                right: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 17,
                                                        },
                                                    },
                                                    span: 16..17,
                                                    kind: Ident(
                                                        Ident {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 16,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 17,
                                                                },
                                                            },
                                                            span: 16..17,
                                                            name: "y",
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
